# fml

./: .gitignore  CLAUDE.md  Cargo.toml  IMPLEMENTATION_PLAN.md  Makefile  README.md
.claude/skills/fml/: SKILL.md
.claude/skills/git-commit/: SKILL.md
.claude/skills/write-docs/: SKILL.md
.github/workflows/: ci.yml
benches/: export_bench.rs  ingestor_bench.rs  normalization_bench.rs  search_bench.rs  store_bench.rs
crates/fml-core/: Cargo.toml
crates/fml-core/src/: config.rs  export.rs  lib.rs  search.rs  store.rs  types.rs
crates/fml-feeds/: Cargo.toml
crates/fml-feeds/src/: docker.rs  file.rs  kubernetes.rs  lib.rs  stdin.rs
crates/fml-tui/: Cargo.toml
crates/fml-tui/src/: app.rs  event.rs  lib.rs  theme.rs
crates/fml-tui/src/commands/: mod.rs
crates/fml-tui/src/themes/: default.toml  gruvbox_dark.toml
crates/fml-tui/src/widgets/: command_bar.rs  help.rs  log_stream.rs  mod.rs  producer_tree.rs  query_bar.rs  tab_bar.rs
docs/: ARCHITECTURE.md  CONFIGURATION.md  FEATURES.md  TESTING.md
docs/search/: GREEDY_ALGORITHM.md
docs/tui/: ARCHITECTURE.md
scripts/: save_baselines.sh
src/: export.rs  ingestor.rs  lib.rs  main.rs  normalizer.rs  search.rs  store.rs  ui.rs
tests/: docker_harness.rs  export_harness.rs  file_harness.rs  headless_harness.rs  kubernetes_harness.rs  normalization_harness.rs  search_harness.rs  stdin_harness.rs  store_harness.rs
tests/common/: assertions.rs  builders.rs  fake_docker_api.rs  fake_process.rs  fixtures.rs  mod.rs
