[package]
name = "fml"
version = "0.1.0"
edition = "2021"
description = "Feed Me Logs — terminal TUI for log aggregation, triage, and searching"
license = "MIT"

[[bin]]
name = "fml"
path = "src/main.rs"

[lib]
name = "fml"
path = "src/lib.rs"

[[bench]]
name = "ingestor_bench"
path = "benches/ingestor_bench.rs"
harness = false

[[bench]]
name = "normalization_bench"
path = "benches/normalization_bench.rs"
harness = false

[[bench]]
name = "store_bench"
path = "benches/store_bench.rs"
harness = false

[[bench]]
name = "search_bench"
path = "benches/search_bench.rs"
harness = false

[[bench]]
name = "export_bench"
path = "benches/export_bench.rs"
harness = false

[dependencies]
# TUI rendering
ratatui = "0.29"
crossterm = "0.28"

# Fuzzy-find picker
skim = "0.10"

# FST-backed term index
fst = "0.4"

# Compile-time perfect hash maps for static ontology
phf = { version = "0.11", features = ["macros"] }

# CLI argument parsing
clap = { version = "4", features = ["derive"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization / log format parsing
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Config file parsing
toml = "0.8"

# Regex for heuristic log parsing
regex = "1"

# inotify-based file watching
notify = "6"

# HTTP client for Docker API
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
tower = "0.5"

# Unix socket support
tokio-util = { version = "0.7", features = ["compat"] }

# MCP server
axum = { version = "0.7", features = ["macros"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Logging for the binary itself
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
# Benchmarking — HTML reports with violin plots; requires gnuplot for graphs
criterion = { version = "0.5", features = ["async_tokio", "html_reports"] }

# Property-based testing
proptest = "1"
proptest-derive = "0.4"

# Snapshot testing
insta = { version = "1", features = ["json", "toml"] }

# Test async code
tokio = { version = "1", features = ["full", "test-util"] }

# Fake Docker API server in tests
axum = { version = "0.7", features = ["macros"] }

# Temp files/dirs for tests
tempfile = "3"

# Better test failure output
pretty_assertions = "1"

# Parameterised tests
rstest = "0.23"

# Generate fake data for tests
fake = { version = "2", features = ["derive"] }

# Async stream utilities for test helpers
futures = "0.3"
bytes = "1"
