[package]
name = "fml-core"
version = "0.1.0"
edition = "2021"
description = "Core types and pipeline layers for fml"
license = "MIT"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
